# fairbot

./: README.md  pyproject.toml  setup.py
fairbot/: api.py  hooks.py  modules.txt
fairbot/fairbot/doctype/faqs/: faqs.json
fairbot/public/css/: chatbot.css
fairbot/public/images/: 6170137678448805837.png:Zone.Identifier  6287028275721125840.png:Zone.Identifier  chat_icon.png:Zone.Identifier
fairbot/public/js/: chatbot.js
