[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fairbot"
version = "0.0.1"
description = "Fairbot - Chatbot for Faircodelab"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "vinay", email = "reddysrivinayofficial@gmail.com"}
]

dependencies = [
    "frappe>=15.0.0",
    "openai==0.27.8",
    "numpy",
    "requests",
    "Pillow"
]

[tool.frappe]
app_name = "fairbot"
version = "0.0.1"
